<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View"/>
        <variable
            name="viewModel"
            type="com.neomoneybonds.app.viewmodels.BasketDetailsViewModel" />
    </data>
<androidx.cardview.widget.CardView
    android:id="@+id/card_header"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:elevation="@dimen/_10dp"
    app:cardCornerRadius="@dimen/_10dp"
    app:layout_constraintTop_toTopOf="parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_basket_details_gradient">

        <ImageView
            android:id="@+id/image_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/finance"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_rate_of_interest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10dp"
            android:layout_marginEnd="@dimen/_14dp"
            android:text="@string/_returns"
            android:textColor="@color/color_text_netural_smoke"
            android:textSize="@dimen/_10sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Returns" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10dp"
            android:layout_marginEnd="@dimen/_14dp"
            android:text="@{String.valueOf(viewModel.currentBasket.basket.getRateOfInterest())}"
            android:textColor="@color/_turqoise"
            android:textSize="@dimen/_14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_rate_of_interest"
            tools:text="7.41%" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_63dp"
            android:layout_marginEnd="@dimen/_14dp"
            android:text="@{viewModel.currentBasket.basket.name}"
            android:textColor="@color/_neutral_snow"
            android:textSize="@dimen/text_22sp"
            android:textStyle="bold"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toEndOf="@id/image_view"
            app:layout_constraintTop_toTopOf="@id/image_view"
            tools:text="Safety Basket" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/bond_price_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_14dp"
            android:layout_marginEnd="@dimen/_16dp"
            android:background="@drawable/bg_basket_gradient"
            app:layout_constraintTop_toBottomOf="@id/image_view">

            <TextView
                android:id="@+id/min_investment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_16dp"
                android:layout_marginTop="@dimen/_10dp"
                android:text="@string/minimum_investment"
                android:textColor="@color/color_text_netural_smoke"

                android:textSize="@dimen/_10sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Minimum Investment" />

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_16dp"
                android:layout_marginTop="@dimen/_10dp"
                android:layout_marginBottom="@dimen/_10dp"
                android:text="@{viewModel.currentBasket.basket.getGrandValue()}"
                android:textColor="@color/black"
                android:textSize="@dimen/_16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/min_investment"
                tools:text="Rs 5620" />

            <TextView
                android:id="@+id/_Bonds"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10dp"
                android:layout_marginEnd="@dimen/_16dp"
                android:text="@string/bonds"
                android:textColor="@color/color_text_netural_smoke"
                android:textSize="@dimen/_10sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Bonds" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10dp"
                android:layout_marginEnd="@dimen/_16dp"
                android:text="@{String.valueOf(viewModel.currentBasket.basketbonds.size())}"
                android:textColor="@color/black"
                android:textSize="@dimen/_16sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/_Bonds"
                tools:text="05" />


        </androidx.constraintlayout.widget.ConstraintLayout>



        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tab_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_20dp"
            android:layout_marginRight="@dimen/_20dp"
            android:background="@drawable/tab_background"
            android:layout_marginTop="@dimen/_15dp"
            app:layout_constraintTop_toBottomOf="@id/bond_price_detail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:tabBackground="@drawable/tab_selector"
            app:tabIndicator="@null"
            app:tabSelectedTextColor="@color/_primary_electric"
            app:tabTextAppearance="@android:style/TextAppearance.Widget.TabWidget"
            app:tabTextColor="@color/white">

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="6 MO" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1 YR" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="2 YR" />

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="3 YR" />
        </com.google.android.material.tabs.TabLayout>

        <include
            android:id="@+id/layout_returns"
            layout="@layout/layout_returns"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16dp"
            android:layout_marginTop="@dimen/_21dp"
            android:layout_marginEnd="@dimen/_16dp"
            app:layout_constraintTop_toBottomOf="@id/tab_layout" />



    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>

</layout>